<resources>
    <string name="app_name">Calculator</string>
    <string name="textResult">TextResult</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="eq">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dup">X</string>
    <string name="div">/</string>
    <string name="AC">AC</string>
    <string name="abs">+/-</string>
    <string name="modulu">%</string>
    <string name="point">ANS</string>
    <string name="NONE">DEL</string>
    <string name="_0">0</string>
</resources>