<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textResult"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="40dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttongrey"
            android:gravity="center"
            android:text="@string/AC"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/abs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttongrey"
            android:gravity="center"
            android:text="@string/abs"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/mod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttongrey"
            android:gravity="center"
            android:text="@string/modulu"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/designbutton"
            android:gravity="center"
            android:onClick="handleFunction"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/duplicate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/designbutton"
            android:gravity="center"
            android:onClick="handleFunction"
            android:text="@string/dup"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/designbutton"
            android:gravity="center"
            android:onClick="handleFunction"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:onClick="handleNumberClick"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:onClick="handleNumberClick"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/designbutton"
            android:gravity="center"
            android:onClick="handleOperatorClick"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BULL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/NONE"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/buttonblack"
            android:gravity="center"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:background="@drawable/designbutton"
            android:gravity="center"
            android:onClick="handleEqualClick"
            android:text="@string/eq"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>


</LinearLayout>